# pkg/models/device.go
@@ -1,6 +1,12 @@
 package models
 
-import "time"
+import (
+	"time"
+
+	"github.com/aglide100/battery-level-checker/pkg/logger"
+	"github.com/go-playground/validator"
+	"go.uber.org/zap"
+)
 
 type Device struct {
 	Name string `validate:"required" json:"name" example:"iphone 99xs"` 
@@ -10,9 +16,34 @@ type Device struct {
 }
 
 type DeviceDetail struct {
-	Name string
-	Type string
-	OS string
-	appVersion string
-	token string
+	Name string `json:"name" example:"iphone 99xs"`
+	Type string `json:"type" example:"phone"`
+	OS string `json:"OS" example:"IOS"`
+	OSversion string `json:"OSversion" example:"99.192"`
+	AppVersion string `json:"appVersion" example:"0.0.1"`
+	PushToken string `json:"pushToken" example:"abcd"`
 }
+
+func DeviceValidation(device *Device) error {
+	var validate *validator.Validate
+
+	err := validate.Struct(device)
+	if err != nil {
+		logger.Error("Device models is not valid", zap.Any("device", device))
+		return err
+	}
+
+	return nil
+}
+
+// func DeviceDetailValidation(deviceDetail *DeviceDetail) error {
+// 	var validate *validator.Validate
+
+// 	err := validate.Struct(deviceDetail)
+// 	if err != nil {
+// 		logger.Error("deviceDetail models is not valid", zap.Any("deviceDetail", deviceDetail))
+// 		return err
+// 	}
+
+// 	return nil
+// }
